--- a/index.html
+++ b/index.html
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>PRIN135-Activity-04</title>
-    <link rel="stylesheet" href="main.css" />
-    
-</head>
-
-
-
-
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>PRIN135-Activity-04</title>
+        <link rel="stylesheet" href="styles.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Frank+Ruhl+Libre:wght@300..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <section>
+            <h1>CSS Color Markers</h1>
+            <div class="container">
+                <div class="marker red"><p>Red</p></div>
+                <div class="marker orange"><p>Orange</p></div>
+                <div class="marker yellow"><p>Yellow</p></div>
+                <div class="marker green"><p>Green</p></div>
+                <div class="marker blue"><p>Blue</p></div>
+                <div class="marker indigo"><p>Indigo</p></div>
+                <div class="marker violet"><p>Violet</p></div>
+                <div class="marker pink"><p>Pink</p></div>
+                <div class="marker brown"><p>Brown</p></div>
+                <div class="marker silver"><p>Silver</p></div>
+                <div class="marker gold"><p>Gold</p></div>
+                <div class="marker teal"><p>Teal</p></div>
+                <div class="marker maroon"><p>Maroon</p></div>
+                <div class="marker magenta"><p>Magenta</p></div>
+                <div class="marker khaki"><p>Khaki</p></div>
+                <div class="marker olive"><p>Olive</p></div>
+            </div>
+        </section>
+    </body>
 </html>
